# IOTServer

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
IOTServer/: main.cc
IOTServer/api/: ActionApi.cc  ActionApi.h  AliasApi.cc  AliasApi.h  DeviceApi.cc  DeviceApi.h  SubscribeApi.cc  SubscribeApi.h  UserApi.cc  UserApi.h
IOTServer/api/cq/: CqAliasApi.h  CqDeviceApi.h  CqSubscribeApi.h  CqUserApi.cc  CqUserApi.h
IOTServer/api/http/: DeviceApi.h  TopicApi.cc  TopicApi.h  UserApi.cc  UserApi.h
IOTServer/common/: Tools.h
IOTServer/cq/: CqAuthMessageFilter.cc  CqAuthMessageFilter.h  CqAuthedMessageHandler.cc  CqCommand.cc  CqCommand.h  CqConnectionPool.cc  CqConnectionPool.h  CqMessageFilter.h  CqMessageHandler.h  CqMessageManager.cc  CqMqttDeviceMessageHandler.cc  CqNoFilterMessage.cc  CqNoFilterMessage.h  CqPrivateChatMessageFilter.cc  CqPrivateChatMessageFilter.h
IOTServer/http/controllers/: ActionController.cc  ActionController.h  AliasController.cc  AliasController.h  DeviceController.cc  DeviceController.h  DeviceMessageNotify.cc  DeviceMessageNotify.h  DeviceMessageNotifyController.cc  SubscribeController.cc  SubscribeController.h  TestCtrl.cc  TopicController.cc  UserController.cc  UserController.h
IOTServer/http/filters/: AdminFilter.cc  AdminFilter.h  LoginFilter.cc
IOTServer/models/: Device.cc  Device.h  SubscribeMap.cc  Topic.cc  User.h  UserDeviceActionMap.cc  UserDeviceActionMap.h  model.json
IOTServer/mqtt/: MqttClient.cc  MqttClient.h  MqttFilterCache.cc  MqttMessageFilter.h  MqttMessageHandler.h  MqttMessagePublisher.cc  MqttMessagePublisher.h
config/: .backup.config.yaml  config.json  config.yaml
controllers/: TestCtrl.h
doc/: .$communication.drawio.bkp  .$communication.drawio.dtmp  API.md  communication.drawio  mqtt.drawio
docker/: docker-compose.yml
docker/arch/: Dockerfile
docker/cqhttp/: Dockerfile
docker/iotserver/: Dockerfile  config.yaml
docker/mosquitto/: Dockerfile  mosquitto.conf
docker/mysql/sql/: IOTServer.sql  iot_server.sql
docker/redis/: Dockerfile  redis.conf
filters/: LoginFilter.cc
models/: Permissions.h  Topics.cc  Topics.h  Users.h  model.json
mysql/: privileges.sql  setup.sh
service/: MqttClient.cc  MqttClient.h  MqttMessageFilter.cc  MqttMessageFilter.h  MqttMessageHandler.cc  MqttMessageHandler.h
site/: angular.json  package-lock.json  package.json
site/public/: index.html
site/src/: styles.css
site/src/app/: app.component.css  app.component.ts  housing.service.ts  routes.ts
site/src/app/action-item/: action-item.component.css  action-item.component.ts
site/src/app/details/: details.component.css  details.component.ts
site/src/app/device-item/: device-item.component.css  device-item.component.ts
site/src/app/home/: home.component.css  home.component.ts
site/src/app/housing-location/: housing-location.component.ts
site/src/components/: Login.vue  UserInfo.vue
src/: main.cc
src/adapter_api/: CqActionApi.cc  CqActionApi.h  CqAliasApi.cc  CqDeviceApi.cc  CqSubscribeApi.cc  CqSubscribeApi.h  CqUserApi.cc
src/api/: DeviceApi.cc  DeviceApi.h  PermissionApi.cc  PermissionApi.h  TopicApi.cc  TopicApi.h  UserApi.cc  UserApi.h
src/common/: Tools.cc  Tools.h  common.h
src/controllers/: CqWebsocket.cc  CqWebsocket.h  DeviceController.cc  DeviceController.h  TopicController.cc  TopicController.h  UserController.cc  UserController.h
src/cqhttp/: CqAuthMessageFilter.cc  CqAuthMessageFilter.h  CqAuthedMessageHandler.h  CqCommand.cc  CqCommand.h  CqCommandFilter.cc  CqCommandFilter.h  CqConnectionPool.cc  CqConnectionPool.h  CqDeviceApi.cc  CqDeviceApi.h  CqEventFilter.cc  CqEventFilter.h  CqMessageManager.cc  CqMessageManager.h  CqMqttDeviceMessageHandler.cc  CqMqttDeviceMessageHandler.h  CqMqttMessageHandler.cc  CqMqttMessageHandler.h  CqNoFilterMessage.cc  CqNoFilterMessage.h  CqPrivateChatMessageFilter.h  CqPrivateChatMessageHandler.cc  CqPrivateChatMessageHandler.h  CqUserApi.cc  CqUserApi.h  CqWebSocketMessageFilter.h  CqWebSocketMessageHandler.h  CqWebSocketMessageManager.cc  CqWebSocketMessageManager.h  CqWebSocketPrivateChatMessageFilter.cc  CqWebSocketPrivateChatMessageFilter.h  CqWebSocketPrivateChatMessageHandler.cc  CqWebSocketPrivateChatMessageHandler.h
src/filters/: AdminFilter.cc  LoginFilter.cc
src/models/: Device.cc  Device.h  DeviceTopics.cc  DeviceTopics.h  Devices.cc  Devices.h  Permissions.cc  SubscribeMap.cc  SubscribeMap.h  Topic.cc  Topic.h  Topics.cc  Topics.h  User.cc  User.h  UserDeviceActionMap.cc  UserDeviceActionMap.h  UserDeviceAliasMap.cc  UserDeviceAliasMap.h  Users.cc  model.json
src/service/: MqttClient.cc  MqttClient.h  MqttFilterCache.cc  MqttFilterCache.h  MqttMessageFilter.cc  MqttMessageFilter.h  MqttMessageHandler.cc  MqttMessagePublisher.h
test/: CMakeLists.txt
test/http_api/: action.rest  alias.rest  device.rest  subscribe.rest  topic.rest  user.rest
(+13 files in other folders)
